<resources>
    <string name="app_name">Campus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="app_label">CAMPUS IITU</string>
    <string name="user_name">Makymetova Ainur</string>
    <string name="user_id">ID: 23961</string>
    <string name="empty" />

    <string name="schedule">Schedule</string>
    <string name="references">My Certificates</string>
    <string name="academic_calendar">Academic Calendar</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="study_plan">My Study plan</string>
    <string name="logout">Log out</string>
    <string name="login_label">Sign in</string>
    <string name="login_username_label">ID</string>
    <string name="login_password_label">Password</string>
    <string name="login_to_system_label">Login to Campus</string>
    <string name="warning">Problem with Internet Connection</string>
    <string name="login_id_empty_input_warning">Username cannot be empty</string>
    <string name="login_pass_empty_input_warning">Password cannot be empty</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="settings">Settings</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="profile">Profile</string>
    <string name="profile_user_image_label">User Image</string>
    <string name="profile_id">ID:</string>
    <string name="profile_name">Name:</string>
    <string name="profile_course">Course:</string>
    <string name="profile_group">Group:</string>
    <string name="profile_phone">Phone Number:</string>
    <string name="profile_contacts">Contacts</string>
    <string name="profile_email">Email:</string>
    <string name="rk1">RK1: </string>
    <string name="rk2">RK2: </string>
    <string name="final_grade">Final Grade: </string>
    <string name="gpa">GPA: </string>
    <string name="no_data_found">No Data</string>
    <string name="send_to_my_email">Send to my email</string>
    <string name="create_certificate">Create Certificate</string>
    <string name="create_transcript">Create Current Transcript</string>
    <string name="select_type">Select Type</string>
    <string name="we_will_send_your_current_transcript_report_to_your_e_mail">We will send your current transcript report to your e-mail</string>
</resources>