<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_calendar"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_academic_calendar"
            android:icon="@drawable/ic_group"
            android:title="@string/academic_calendar" />
        <item
            android:id="@+id/nav_study_plan"
            android:icon="@drawable/ic_plan"
            android:title="@string/study_plan" />
        <item
            android:id="@+id/nav_references"
            android:icon="@drawable/ic_references"
            android:title="@string/references" />
        <item
            android:id="@+id/v"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_chat"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>