<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="kz.iitu.campus.ui.home.HomeFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_academic_calendar"
        android:name="kz.iitu.campus.ui.academ_calendar.AcademicCalendarFragment"
        android:label="@string/academic_calendar"
        tools:layout="@layout/fragment_academic_calendar" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="kz.iitu.campus.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <dialog
        android:id="@+id/nav_logout"
        android:name="kz.iitu.campus.ui.login.ExitDialog"
        android:label="@string/logout"
        tools:layout="@layout/dialog_exit" />

</navigation>