<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16sdp"
    android:layout_margin="@dimen/_8sdp">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_really_want_to_exit"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label">

        <Button
            android:id="@+id/btn_no"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/no"
            android:textColor="@color/secondary_text_color"
            style="?attr/materialButtonOutlinedStyle" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/yes"
            android:background="@color/primary_text_color"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
