<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/campus_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/ic_campus" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/app_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/large_text_size" />

        </LinearLayout>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24sdp"
        app:cardCornerRadius="@dimen/large_text_size"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_16sdp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/login_to_system_label"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/large_text_size" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:hint="@string/login_username_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameText"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:hint="@string/login_password_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_44sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/login_label"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="@color/primary_blue" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>